Overflow issue; make sure user can only delete non-finalized session

--- a/src/containers/Profile/styles.scss
+++ b/src/containers/Profile/styles.scss
@@ -12,7 +12,7 @@
 
   form {
     flex: 1;
-    overflow: scroll;
+    overflow: auto;
     position: relative;
     width: 80%;
     margin: 0 auto;
